# bakeC

./: .coderabbit.yaml  .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: adding-a-model.md  architecture.md  automotive-mapping.md  model_background.md  safety-context.md  simulink-comparison.md  tlc-mapping.md
docs/decisions/: 001-template-engine.md  002-yaml-models.md  003-static-allocation.md  004-type-abstraction.md  005-basis-function-unrolling.md  006-traceability.md
models/: lookup_table_1d.yaml  lung_mnarx.yaml  pid_controller.yaml
quality/: check_generated.py  rules.yaml
src/bakec/: __init__.py  cli.py  engine.py  parser.py  schema.py  validator.py  writer.py
src/bakec/checks/: api_stability.py  misra.py  platform_constraints.py  regression.py  rules.yaml  runner.py  safety.py  traceability.py
templates/: controller.c.j2  controller.h.j2  controller_data.c.j2  controller_types.h.j2
templates/blocks/: basis_function.c.j2  lookup_table.c.j2  pid.c.j2
tests/: test_api_stability_checks.py  test_cli.py  test_engine.py  test_integration.py  test_misra_checks.py  test_parser.py  test_platform_constraint_checks.py  test_precision_equivalence.py  test_regression_checks.py  test_safety_checks.py  test_traceability_checks.py  test_validator.py  test_writer.py
tests/c/: CMakeLists.txt  test_basis_functions.c  test_lookup_table.c  test_pid_controller.c
